--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 spring.application.name=spring-aws-microservices
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:mariadb://localhost:3306/aws_microservice01?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=
