--- a/build.gradle
+++ b/build.gradle
@@ -6,12 +6,12 @@ plugins {
 }
 
 group = 'vinicciusdev'
-version = '1.4.0'
+version = '1.5.0'
 description = 'Projeto de microsserviços com Spring Boot em cluster AWS usando ECS, SNS, SQS, RDS, DynamoDB e S3.'
 
 bootJar {
     archiveBaseName.set('spring-aws-microservice01')
-    archiveVersion.set('1.4.0')
+    archiveVersion.set('1.5.0')
 }
 
 java {
@@ -32,7 +32,7 @@ dependencies {
     implementation 'org.springframework:spring-jms:5.2.9.RELEASE'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.mariadb.jdbc:mariadb-java-client:3.2.0'
-    // implementation 'com.amazonaws:aws-java-sdk-sns:1.12.13'
+    implementation 'com.amazonaws:aws-java-sdk-sns:1.12.13'
     // implementation 'com.amazonaws:aws-java-sdk-s3:1.12.13'
 
     compileOnly 'org.projectlombok:lombok:1.18.34'
