chore(properties): Adicionando chaves para aws, region e arn do topic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mariadb://localhost:3306/aws_microservice01?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
+
+aws.region=us-east-1
+aws.sns.topic.product.events.arn=product-events
